!1152 fix(#I3ALSP): update show progress when set IsMultiple to true on Upload component * docs: 更新菜单状态 * docs: 更新 Upload 示例 * fix: 增加多文件上传更新 UI 逻辑 * style: 微调主题按钮 z-index

--- a/src/BootstrapBlazor.Shared/wwwroot/css/site.css
+++ b/src/BootstrapBlazor.Shared/wwwroot/css/site.css
@@ -1501,7 +1501,7 @@ section {
     border-radius: 50%;
     box-shadow: 0px 1px 20px 0px rgba(0,0,0,0.1),inset 0px -1px 0px 0px rgba(0,0,0,0.1);
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     right: 1rem;
     bottom: 8rem;
     background-color: #034995;
